# arduino-audiokit

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE-espressif  README.md  library.properties
.github/ISSUE_TEMPLATE/: Issue-report.yml
docs/html/: _audio_kit_8h.html  _audio_kit_8h_source.html  _audio_kit_codec_8h_source.html  _audio_kit_config_8h_source.html  _audio_kit_h_a_l_8h_source.html  _audio_kit_settings_8h.html  _audio_kit_settings_8h_source.html  annotated.html  audio__error_8h_source.html  audio__gpio_8h.html  audio__gpio_8h_source.html  audio__hal_8h.html  audio__hal_8h_source.html  audio__idf__version_8h_source.html  audio__mem_8h_source.html  audio__mutex_8h_source.html  audio__system_8h.html  audio__system_8h_source.html  audio__type__def_8h.html  audio__type__def_8h_source.html  audio__types_8h.html  audio__types_8h_source.html  audio__version_8h_source.html  audiokit__board_8h.html  audiokit__board_8h_source.html  audiokit__logger_8h.html  audiokit__logger_8h_source.html  board_8h_source.html  board__pins__config_8h_source.html  class_audio_kit-members.html  class_audio_kit.html  class_audio_kit_codec-members.html  class_audio_kit_codec.html  classaudiokit_1_1_audio_kit-members.html  classaudiokit_1_1_audio_kit.html  classboard__driver-members.html  classboard__driver.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a0b9af12076047c42584c30cf59d2be.html  (+35 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+16 more)
examples/headphone/: output.ino
examples/input/: input.ino
examples/input-and-output/: input-and-output.ino
examples/output/: SineWaveGenerator.h  output.ino
examples/output_without_i2s/: SineWaveGenerator.h  output_without_i2s.ino
examples/sd_begin/: sd_begin.ino
examples/sdbegin/: sdbegin.ino
examples/sdmmc_begin/: sdmmc_begin.ino
src/: AudioKit.h  AudioKitHAL.h  AudioKitSettings.h  audio_error.h  audio_gpio.h  audio_hal.h  audio_mem.h  audio_system.h  audio_type_def.h  audio_types.h  audiokit_board.h  audiokit_logger.h  board_pins_config.h  esp_peripherals.h  i2c_bus.h  periph_sdcard.h
src/audio_board/: ai_thinker_ac101.h  ai_thinker_es8388_5.h  ai_thinker_es8388_7.h  esp32_s2_kaluga_1_v1_2.h  esp32_s3_box.h  esp32_s3_box_lite.h  generic.h  generic_es8311.h  generic_es8388.h  lyrat_mini_v1_1.h  lyrat_v4_2.h  lyrat_v4_3.h
src/audio_board/ai_thinker_ac101/: board.c  board.h  board_def.h  board_pins_config.c
src/audio_board/ai_thinker_es8388_2957/: board_pins_config.c
src/audio_board/ai_thinker_es8388_3478/: board.c  board_def.h  board_pins_config.c
src/audio_board/ai_thinker_v2_2/: board.c  board.h  board_def.h  board_pins_config.c
src/audio_board/common/: esp32_sd.h
src/audio_board/esp32_s2_kaluga_1_v1_2/: board.c  board.h  board_def.h  board_pins_config.c
src/audio_board/generic_es8311/: board_def.h  board_pins_config.c
src/audio_board/generic_es8388/: board.c  board.h  board_def.h  (+1 more)
src/audio_hal/: arduino-audiokit.code-workspace  audio_error.h  audio_gpio.c  audio_gpio.cpp  audio_gpio.h  audio_hal.c  audio_hal.h  audio_mem.c  audio_mem.h  audio_mutex.c  audio_mutex.h  audio_type_def.h  audio_types.h  audiokit_board.h  audiokit_board_select.h  audiokit_logger.c  audiokit_logger.cpp  audiokit_logger.h  board_pins_config.h  common_defines.h  driver_pins.cpp  driver_pins.h  i2c_bus.c  i2c_bus.h  i2c_wire.cpp
src/peripherals/: audio_gpio.cpp  audio_mem.c  audio_mutex.c  audiokit_logger.cpp  i2c_bus.c  i2c_wire.cpp  periph_sdcard.cpp
(+50 files in other folders)
